--- a/slides.css
+++ b/slides.css
@@ -85,6 +85,11 @@ th {
     background-color: #ccc;
 }
 
+img {
+    max-width: 100%;
+    max-height: auto;
+}
+
 /* Slide-specific styling */
 #slide-inverse .footnote {
     bottom: 12px;
